# pi-api

./: # Master Brand Research Prompt.txt  ## 11. Pull-Quote Review Card.txt  ## 12. Lifestyle Action + Product C.txt  ## 13. Stat Surround  Callout Radia.txt  ## 14. Bundle Showcase + Benefit Ba.txt  ## 15. Social Comment Screenshot +.txt  ## 16. Curiosity Gap  Hook Quote Te.txt  ## 17. Verified Review Card.txt  ## 18. Stat Surround  Callout Radia.txt  ## 19. Highlighted  Annotated Testi.txt  ## 20. Advertorial  Editorial Conte.txt  ## 22. Flavor Story  “Tastes Like”.txt  ## 25. Us vs. Them Color Split.txt  ## 29. UGC + Viral Post Overlay.txt  ## 33. Faux Press  News Articles Sc.txt  ## 4. FeaturesBenefits Point-Out.txt  ## 40. Native  Ugly Post-It Note St.txt  ## 7. Us vs Them.txt  ## 8. Before & After (UGC Native).txt  .cursorrules  .env.example  .gitignore  Here is the complete, finalized mas.txt  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-PROGRESS.md  README.md  SEAMLESS-INTEGRATION-SUMMARY.md  avatar facecard 1.txt  blueprint.txt  docker-compose.surveillance.yml  eslint.config.mjs  greats fons for desing.txt  mint.json  next.config.ts  package-lock.json  package.json  pi-api-sdk-0.0.1.tgz  prompt structure for desing.txt  skills-lock.json  tailwind.config.ts  (+10 more)
.cursor/: mcp.json  settings.json
.github/: check-workflow.ps1
architecture/: 01-system-overview.md  health-neuro-overview.md  operations-runbook.md
artifacts/: README.md  brand-e2e-dynamic-validation.json  brand-e2e-green-run.json  brand-e2e-last-run.json  brand-e2e-security-checks.json  brand-production-fixes-validation.json  brand-project-dynamic-validation.json  brand-project-exact-raw-paragraph.json  brand-project-tuned-long-paragraph-final.json  projection-golden-check.1.5-flash-220.json  projection-golden-check.flash-2.0-300.json  projection-golden-check.flash-lite-220.json  projection-golden-check.json  projection-hardening-smoke.json
docs/: README.md  docs-manifest.json
images datasets/: 112az (1)  17pin (2)  17pin (3)  17pin (4)  17pin (5)  17pin (6)  17pin (7)  dasnew (1)  dasnew (1).pk  dasnew (2)
prompts datasets/: # Claude Follow-up Prompt.txt  ## 1. Headline.txt  ## 10. PressEditorial.txt  ## 2. OfferPromotion.txt  ## 21. Bold Statement  Reaction Hea.txt  ## 23. Long-Form Manifesto  Letter.txt  ## 24. Product + Comment Callout (F.txt  ## 26. Stat Callout (Data-Driven Li.txt  ## 27. Benefit Checklist Showcase (.txt  ## 28. Feature Arrow Callout  Produ.txt  ## 3. Testimonials.txt  ## 30. Hero Statement + Icon Benefi.txt  ## 31. Comparison Grid  Table.txt  ## 32. UGC Story Callout  Text Bubb.txt  ## 34. Faux iPhone Notes  App Scree.txt  ## 35. Hero Product Showcase + Stat.txt  ## 36. Whiteboard Before  After + P.txt  ## 37. Hero Statement + Icon Bar +.txt  ## 38. UGC Lifestyle + Product + Re.txt  ## 39. Curiosity Gap + Scroll-Stopp.txt  ## 5. Bullet-Points.txt  ## 6. Social Proof.txt  ## 9. Negative Marketing (Bait & Sw.txt  Campaign Generator Prompt 👇.txt  Ultra-realistic avatar1.txt  brand identity.txt  prompt desing  2.txt  prompt example with french text.txt  template avatar editing image.txt  template avatar editing.txt  template editing image 1.txt  template image editing 2.txt  template image editing 3.txt  template image editing 5.txt  template image editing 7.txt  template image editing 8.txt  tempolate image editing4.txt
scripts/: adherence-detection-e2e.mjs  (+29 more)
services/bytetrack-tracker/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt
services/bytetrack-tracker/pi_bytetrack_tracker/: api.py  geometry.py  kalman.py  tracker.py
services/bytetrack-tracker/scripts/: smoke_imports.py
services/bytetrack-tracker/tests/: test_tracking.py
services/memae-anomaly/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt
services/memae-anomaly/pi_memae_anomaly/: api.py  model.py
services/memae-anomaly/scripts/: smoke_imports.py
services/memae-anomaly/tests/: test_anomaly_route.py
services/metabci-neuro/: Dockerfile  Dockerfile.api  README.md  pyproject.toml  requirements-api.in  requirements-api.lock.txt  requirements.in  requirements.lock.txt
services/metabci-neuro/pi_metabci_neuro/: __init__.py  api.py
services/metabci-neuro/scripts/: smoke_imports.py
services/mmaction-recognition/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt  uv.toml
services/mmaction-recognition/pi_mmaction_recognition/: api.py  recognizer.py
services/mmaction-recognition/scripts/: smoke_imports.py
services/mmaction-recognition/tests/: test_action_route.py
services/monai-imaging/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt
services/monai-imaging/pi_monai_imaging/: __init__.py  api.py
services/monai-imaging/scripts/: smoke_imports.py
services/ros2-bridge/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.lock.txt
services/ros2-bridge/pi_ros2_bridge/: api.py  schemas.py
services/ros2-bridge/scripts/: smoke_imports.py
services/ros2-bridge/tests/: test_health.py
services/surveillance-orchestrator/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt
services/surveillance-orchestrator/pi_surveillance_orchestrator/: api.py  pipeline.py  schemas.py
services/surveillance-orchestrator/scripts/: smoke_imports.py
services/surveillance-orchestrator/tests/: test_orchestrator_health.py
services/yolo-detection/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-ci.in  requirements-ci.lock.txt  requirements.in  requirements.lock.txt
services/yolo-detection/pi_yolo_detection/: api.py  detector.py  image_io.py
services/yolo-detection/scripts/: smoke_imports.py
services/yolo-detection/tests/: test_detection.py
(+607 files in other folders)
