[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-bytetrack-tracker"
version = "0.1.0"
description = "Pi video surveillance tracking service (Python): ByteTrack-style multi-object tracking — not installed into the Next.js app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Pi internal; ByteTrack MIT (upstream). This service uses a compatible reimplementation." }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "numpy==2.1.1",
  "scipy==1.17.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_bytetrack_tracker"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "scripts", "pi_bytetrack_tracker", "tests"]
