[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-memae-anomaly"
version = "0.1.0"
description = "Pi video surveillance anomaly scoring service (Python): MemAE-style autoencoder — not installed into the Next.js app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Pi internal; MemAE academic reference. We implement a minimal compatible model for MVP." }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_memae_anomaly"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "scripts", "pi_memae_anomaly", "tests"]
