[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-metabci-neuro"
version = "0.1.0"
description = "Pi neuro Python env: MetaBCI + Braindecode + MOABB — not installed into the Next.js app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Pi internal; MetaBCI GPL-2.0; Braindecode & MOABB BSD-3-Clause — see docs/integrations/" }
dependencies = [
  "metabci[all]==0.2.0",
  "braindecode==1.3.2",
  "moabb==1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_metabci_neuro"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "scripts", "pi_metabci_neuro"]
