[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-surveillance-orchestrator"
version = "0.1.0"
description = "Pi video surveillance orchestrator (Python): perception pipeline coordinator — not installed into the Next.js app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Pi internal." }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_surveillance_orchestrator"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "scripts", "pi_surveillance_orchestrator", "tests"]
